# OpenSSLDemoAPP

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/openssldemoapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  openssl-wrapper.cpp
app/src/main/java/com/example/openssldemoapp/: MainActivity.java  OpenSSLHelp.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/openssldemoapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
